changes in homepage section

--- a/src/components/Home/subComponents/BookAFlight.css
+++ b/src/components/Home/subComponents/BookAFlight.css
@@ -1,7 +1,7 @@
 .ProductSection {
   height: 35rem;
   background-image: linear-gradient(rgba(0, 0, 0, 0.1) 20%, rgba(0, 0, 0, 0.1)),
-    url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    url("https://img.freepik.com/free-photo/beautiful-tropical-beach-sea_74190-6772.jpg?t=st=1708768218~exp=1708771818~hmac=33d2988b0eda554a0c51bb6cf0272ac46a423dacdfdebd9c3e4885ca7aeb0ddc&w=740");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
