--- a/src/globalSubComponents/NavBar.css
+++ b/src/globalSubComponents/NavBar.css
@@ -1,5 +1,5 @@
 .active {
-  color: #0a97b0;
+  color: #56ab91;
   font-weight: 500;
   font-size: 1.1rem;
 }
@@ -10,7 +10,7 @@
 }
 
 .notActive:hover {
-  color: #0a97b0;
+  color: #56ab91;
 }
 
 .navActiveServices::after {
